--- a/Happiness_report.ipynb
+++ b/Happiness_report.ipynb
@@ -26,7 +26,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns"
    ]
   },
   {
